--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -1,20 +1,11 @@
-# devops-netology
-
-To be, or not to be
-
-
-Игнорировать все в папке .terraform, из любой поддиректории
+ Local .terraform directories
 **/.terraform/*
 
 # .tfstate files
-игнорировать все файлы с расширением рекурсивно
 *.tfstate
-
-Игнорировать все файлы с любими символома до точки и после
 *.tfstate.*
 
 # Crash log files
-Игнорировать все файлы с таким именем рекурсивно
 crash.log
 
 # Exclude all .tfvars files, which are likely to contain sentitive data, such as
@@ -22,7 +13,6 @@ crash.log
 # control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 #
-игнорировать файлы с любими символами до точки 
 *.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
@@ -41,4 +31,4 @@ override.tf.json
 
 # Ignore CLI configuration files
 .terraformrc
-terraform.rc 
+terraform.rc
