--- a/8.1/playbook/inventory/prod.yml
+++ b/8.1/playbook/inventory/prod.yml
@@ -1,9 +1,9 @@
 ---
   el:
     hosts:
-      centos7:
+      centos:
         ansible_connection: docker
-  deb:
+  eb:
     hosts:
       ubuntu:
         ansible_connection: docker
