--- a/8.2/playbook/site.yml
+++ b/8.2/playbook/site.yml
@@ -13,12 +13,14 @@
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/{{ item }}-{{ clickhouse_version }}.noarch.rpm"
             dest: "./{{ item }}-{{ clickhouse_version }}.rpm"
+            mode: 0755
           with_items: "{{ clickhouse_packages }}"
       rescue:
         - name: Get clickhouse distrib
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-{{ clickhouse_version }}.x86_64.rpm"
             dest: "./clickhouse-common-static-{{ clickhouse_version }}.rpm"
+            mode: 0755
     - name: Install clickhouse packages
       become: true
       ansible.builtin.yum:
@@ -27,12 +29,16 @@
           - clickhouse-client-{{ clickhouse_version }}.rpm
           - clickhouse-server-{{ clickhouse_version }}.rpm
       notify: Start clickhouse service
+    - name: Flush handlers
+      ansible.builtin.meta: flush_handlers
+    - name: Delay 5 sec
+      ansible.builtin.pause:
+        seconds: 5
     - name: Create database
       ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
       register: create_db
       failed_when: create_db.rc != 0 and create_db.rc !=82
       changed_when: create_db.rc == 0
-
 
 - name: Install Vector
   hosts: vector
@@ -54,8 +60,8 @@
       ansible.builtin.yum:
         name: vector-0.21.1-1.{{ ansible_architecture }}.rpm
       notify: Start Vector service
-
     - name: Deploy config Vector
+      become: yes
       ansible.builtin.template:
         src: vector.j2
         dest: /etc/vector/vector.toml
